--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
     </header>
     <section class="main">
         <article class="wrapper">
-            <img src="/images/bg-main.png" alt="">
+            <img src="images/bg-main.png" alt="">
             <div class="main-left">
                 <h2>Could you be our <br>
                     <i>next winner?</i></h2>
@@ -51,19 +51,19 @@
             <h2>How it works</h2>
             <div class="how-list">
                 <div class="how-item">
-                    <img src="/images/svg/how1.svg" alt="">
+                    <img src="images/svg/how1.svg" alt="">
                     <p>Choose a competition and how many entries you would like</p>
                 </div>
                 <div class="how-item">
-                    <img src="/images/svg/how2.svg" alt="">
+                    <img src="images/svg/how2.svg" alt="">
                     <p>Answer the qualifying question (be sure to answer correctly!) and complete payment</p>
                 </div>
                 <div class="how-item">
-                    <img src="/images/svg/how3.svg" alt="">
+                    <img src="images/svg/how3.svg" alt="">
                     <p>Tickets for all correct answers are entered into the draw, streamed LIVE on Facebook using Google’s random number generator</p>
                 </div>
                 <div class="how-item">
-                    <img src="/images/svg/how4.svg" alt="">
+                    <img src="images/svg/how4.svg" alt="">
                     <p>If you win, we may try to contact you whilst live on Facebook, so be prepared!</p>
                 </div>
             </div>
