--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
     <section class="main">
         <article class="wrapper">
-            <img src="/images/bg-main.png" alt="">
+            <img src="images/bg-main.png" alt="">
             <div class="main-left">
                 <h2>Could you be our <br>
                     <i>next winner?</i></h2>
@@ -54,7 +54,7 @@
             <div class="competitions-list">
                 <a class="competitions-item" target="_blank" href="#">
 <div class="in">
-    <img src="/images/com1.png" alt="">
+    <img src="images/com1.png" alt="">
     <div class="text-in">
         <h3>2020 Audi S5 Coupe</h3>
         <b>$19.99</b><i>$54.68</i>
@@ -64,7 +64,7 @@
                 </a>
                 <a class="competitions-item" target="_blank" href="#">
 <div class="in">
-    <img src="/images/com2.png" alt="">
+    <img src="images/com2.png" alt="">
     <div class="text-in">
         <h3>2016 Ford Mustang GT</h3>
         <b>$7.99</b><i>$9.68</i>
@@ -74,7 +74,7 @@
                 </a>
                 <a class="competitions-item" target="_blank" href="#">
 <div class="in">
-    <img src="/images/com3.png" alt="">
+    <img src="images/com3.png" alt="">
     <div class="text-in">
         <h3>2020 Bugatti Chiron</h3>
         <b>$0.99</b><i>$1.39</i>
@@ -84,7 +84,7 @@
                 </a>
                 <a class="competitions-item" target="_blank" href="#">
 <div class="in">
-    <img src="/images/com4.png" alt="">
+    <img src="images/com4.png" alt="">
     <div class="text-in">
         <h3>2019 Porsche 911 Carrera</h3>
         <b>$1.99</b><i>$2.99</i>
@@ -100,19 +100,19 @@
             <h2>How it works</h2>
             <div class="how-list">
                 <div class="how-item">
-                    <img src="/images/svg/how1.svg" alt="">
+                    <img src="images/svg/how1.svg" alt="">
                     <p>Choose a competition and how many entries you would like</p>
                 </div>
                 <div class="how-item">
-                    <img src="/images/svg/how2.svg" alt="">
+                    <img src="images/svg/how2.svg" alt="">
                     <p>Answer the qualifying question (be sure to answer correctly!) and complete payment</p>
                 </div>
                 <div class="how-item">
-                    <img src="/images/svg/how3.svg" alt="">
+                    <img src="images/svg/how3.svg" alt="">
                     <p>Tickets for all correct answers are entered into the draw, streamed LIVE on Facebook using Google’s random number generator</p>
                 </div>
                 <div class="how-item">
-                    <img src="/images/svg/how4.svg" alt="">
+                    <img src="images/svg/how4.svg" alt="">
                     <p>If you win, we may try to contact you whilst live on Facebook, so be prepared!</p>
                 </div>
             </div>
@@ -147,7 +147,7 @@
             <div class="winners-list">
                 <a class="winners-item" target="_blank" href="#">
                     <div class="in">
-    <img src="/images/win1.png" alt="">
+    <img src="images/win1.png" alt="">
     <div class="text-in">
         <h3>Ferrari 458</h3>
         <p>12 November 2020</p>
@@ -156,7 +156,7 @@
                 </a>
                 <a class="winners-item" target="_blank" href="#">
                     <div class="in">
-    <img src="/images/win2.png" alt="">
+    <img src="images/win2.png" alt="">
     <div class="text-in">
         <h3>Aquila Gullwing</h3>
         <p>9 November 2020</p>
@@ -165,7 +165,7 @@
                 </a>
                 <a class="winners-item" target="_blank" href="#">
                     <div class="in">
-    <img src="/images/win3.png" alt="">
+    <img src="images/win3.png" alt="">
     <div class="text-in">
         <h3>2020 Audi S5 Coupe</h3>
         <p>5 November 2020</p>
@@ -174,7 +174,7 @@
                 </a>
                 <a class="winners-item" target="_blank" href="#">
                     <div class="in">
-    <img src="/images/win4.png" alt="">
+    <img src="images/win4.png" alt="">
     <div class="text-in">
         <h3>Ferrari Purosangue SUV</h3>
         <p>25 September 2020</p>
