--- a/html/sections/competitions-item.html
+++ b/html/sections/competitions-item.html
@@ -1,5 +1,5 @@
 <div class="in">
-    <img src="/images/@@img" alt="">
+    <img src="images/@@img" alt="">
     <div class="text-in">
         <h3>@@title</h3>
         <b>$@@new-price</b><i>$@@old-price</i>
