--- a/html/sections/header.html
+++ b/html/sections/header.html
@@ -1,5 +1,5 @@
 <article class="wrapper">
-    <a class="header-logo" href="#"><img src="/images/logo.png" alt=""></a>
+    <a class="header-logo" href="#"><img src="images/logo.png" alt=""></a>
     <div class="burger">
         <span></span>
     </div>
