--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
         <article class="wrapper">
-    <a class="header-logo" href="#"><img src="/images/logo.png" alt=""></a>
+    <a class="header-logo" href="#"><img src="images/logo.png" alt=""></a>
     <div class="burger">
         <span></span>
     </div>
